fixed index.html alignment and achieved near pixel perfect

--- a/pt1/less/index.less
+++ b/pt1/less/index.less
@@ -3,39 +3,33 @@
 // }
 
 .main-content {
-  padding-left: 5%;
-  padding-top: 10%;
-}
-
-.nav-wrapper img {
-  padding: 1.125em 0em 0em 1.375em;
+  margin: 13.8vw 0px 74.9vh 96px;
+  z-index: 1;
+  width: 45vw;
 }
 
 .prompt-header {
-  width: 51%;
   font-family: "gilroylight";
   font-weight: 900;
   color: #3f3f3f;
-  line-height: 1.25em;
-  padding: 58px 0px 0px 26px;
   font-size: 60px;
   line-height: 72px;
   letter-spacing: 0.25px;
 }
 
 .prompt-paragraph {
-  padding: 37px 0px 0px 24px;
+  padding: 39px 0px 0px 0px;
   font-family: gilroylight;
   line-height: 30px;
   font-size: 21px;
-  letter-spacing: 0.25px;
-  /* padding-bottom: 10px; */
-  width: 46%;
+  letter-spacing: 0.05px;
+  width: 86%;
+  font-weight: 800;
 }
 
 .findTrialInputs {
   display: flex;
-  padding: 45px 0px 0px 11px;
+  padding: 46px 0px 0px 0px;
 }
 
 #findTrialButton {
@@ -45,8 +39,7 @@
   width: 127px;
   border: 0;
   color: white;
-  /* text-align: center; */
-  align-items: center;
+
   justify-content: center;
   text-decoration: none;
   display: flex;
@@ -56,6 +49,8 @@
   text-transform: uppercase;
   transition: 0.3s background ease;
   z-index: 1;
+  text-align: center;
+  align-items: center;
 
   &:hover {
     background: #1bd9c4;
@@ -92,10 +87,11 @@
 
 .molecules {
   pointer-events: none;
-  margin-top: -30%;
+  margin-top: 7%;
   margin-bottom: 6.3%;
   z-index: 0;
   float: right;
+  position: absolute;
   img {
     width: 100vw;
   }
